<resources>
    <string name="app_name">CentreForDentistry</string>
    <string name="stage1_authentication">Stage1 Authentication</string>
    <string name="heading">To begin, click on the authentication text message
    you have been sent by Centre for Dentistry</string>
    <string name="heading1">if you have not received text message, or you are not yet a
    registered CFD patient, please click here to contact the Patient Care Team and they will sent it to you</string>
    <string name="message1">You should have received an introductory text or email from CFD</string>
    <string name="message2">Please click on the link in that text. if you have not already,you will
    then receive an Authentication text so you can login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_practice">My Practice</string>
    <string name="nav_appointments">Appointments</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_voucher_wallet">Voucher Wallet</string>
    <string name="nav_treatment_info">Treatment Info</string>
    <string name="nav_my_plans">My Plans</string>
    <string name="nav_refer_friend">Refer Friend</string>
    <string name="nav_request_callback">Request CallBack</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="find_an_available">find an available slot at one of our Practices and book yourself in</string>
    <string name="existing_appointments">Existing Appointments</string>
    <string name="any_past">Any past or future appointments that have already been booked</string>
    <string name="emergency_appointments">Emergency Appointments</string>
    <string name="about_us">About Us</string>
    <string-array name="nav_item_activity_titles">
        <item>Centre For Dentistry</item>
        <item>My Practice</item>
        <item>Appointments</item>
        <item>Messages</item>
        <item>Voucher Wallet</item>
        <item>Treatment Info</item>
        <item>My Plans</item>
        <item>Refer a Friend</item>
        <item>Request CallBack</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refer_friend_message">When you refer a friend or family member to us at CFD. We like to say thank you. Refer friend to quality for 10%
    of your next visit. As the CFD family grows so does your reward.</string>
    <string name="my_plan_message">
        Our Amual Dental plan offers you a cost effective way to help look after you teeth  and prevent
        problems from building up. The Dental plan is designed to help you plan for your oral health
        over time so we can look after you and your smile.

    </string>
    <string name="my_plan_message2">
        A year\'s membership to the CFD annual dental plan entities you to:
        <ul>
            <li>Routine Dental Check-Ups</li>
            <li>Routine scale and Polish Appointments</li>
            <li>Considerable Cost Savings</li>
            <li>10% off most dental treatments</li>
            <li>Discounts on dental care products for our plan members</li>
            <li>Free Check-Up and Flouride Application for children </li>
        </ul>
    </string>
    <string name="resetdata">
        Caution - This will remove all personal information from this app and reset it to the
        original state. You will need to contact the CFD again  to associate with your data.
    </string>
    <string name="request_callback">

        if you would like to talk to us - whether that is to book an appointment, talk about a
        treatment or simply ask a question - we are happy to help. Our Patient Care Team will call you back.
    </string>
    <string name="bridgesandpartialdentures_title">Bridges and Partial Dentures</string>
    <string name="bridgesandpartialdentures_desc">\tIf you have a gap left by a missing tooth this can put more strain on the teeth at either side and affect your ‘bite’ as the teeth next to the space can lean into the gap and change the way the upper and lower teeth bite together. This can then lead to food getting stuck in the gap, causing decay and gum disease.
    Bridges or partial dentures may be the answer.\n\n
    Bridges are exactly that: a bridge. Most bridges are fixed prosthetic devices that cover the gap between existing natural teeth or implants. The adjacent teeth are prepared as crowns and hold a false tooth in place.
    A partial denture is a plate with one or more false teeth on it. It can be made of plastic or a mixture of metal and plastic. Both types may have clips (clasps) to help keep the denture in place in your mouth. Depending on where they are, some of these clips may show when you smile or open your mouth.
    The dentist will advise on the best option for your teeth and explain the ins and outs of each option to allow you to decide if this is the route you want to go.\n\n</string>
    <string name="bridgesandpartialdentures_question_1"><b>What are my options for replacing missing teeth?</b>\n</string>
    <string name="bridgesandpartialdentures_answer_1">This depends on the number of teeth missing, where they are in your mouth, and the condition of your remaining teeth.\n
        There are three main ways to replace missing teeth.\n
        1. Removable false tooth (or teeth) – called a partial denture.\n
        2. Fixed bridge. Usually used when there are fewer teeth to replace, or when the missing teeth are only on one side of the mouth.\n
        3. Dental implants. This is where an artificial root is placed into the bone of the jaw and a crown or bridge placed on top of this.\n\n</string>
    <string name="bridgesandpartialdentures_question_2"><b>What\'s the benefit of a metal denture over plastic?</b>\n</string>
    <string name="bridgesandpartialdentures_answer_2">Plastic partial dentures are less expensive but,unless they are designed very carefully, can damage the teeth they fit against.
        Metal partial dentures are usually made from an alloy of cobalt and chromium and are much stronger. They are lighter to wear and can be supported by the remaining teeth. Although the base is metal, they have gum-coloured plastic and natural-looking teeth fixed to them.
        They are more expensive than plastic ones.\n\n</string>
    <string name="bridgesandpartialdentures_question_3"><b>Are there reasons why I may not be able to have a bridge fitted?</b>\n</string>
    <string name="bridgesandpartialdentures_answer_3">You can have a bridge only if you have enough strong teeth with good bone support or dental implants that can hold the bridge in place.
        The dentist can advise on the best options for your mouth.\n\n</string>
    <string name="bridgesandpartialdentures_question_4"><b>How do I look after my dental bridge?</b>\n</string>
    <string name="bridgesandpartialdentures_answer_4">You should care for your dental bridge by cleaning it every day. This will help to prevent problems such as bad breath and gum disease. You should also clean under the false tooth every day.
        We will show you how to use a bridge needle or special floss to reach this tricky to get to areas.\n\n</string>
    <string name="bridgesandpartialdentures_question_5"><b>I\'ve heard implants are a better option. Is this true?</b>\n</string>
    <string name="bridgesandpartialdentures_answer_5">One of the benefits of dental implants is that you may be able to replace missing teeth without having to have crowns on other teeth. Talk to the dentist about the options and the pros and cons of each.\n\n</string>
    <string name="bridgesandpartialdentures_count">5</string>
    <string name="childrendental_title">Children\'s Dental Treatment</string>
    <string name="childrendental_desc">\tWith children’s dental decay on the rise, it is increasingly important to ensure that your children’s teeth are checked regularly. The dentist will not only complete a full check up but can also, if desired, add a fluoride application for extra protection against decay. For children under 11 years old, whose parent’s are registered with the practice, both the check up and fluoride application are free. For children 11 years and above the price is £15.\n\n
    Even if you have a phobia of dentists yourself, it is of vital importance that you bring your child regularly.  The earlier you start bringing your child to the dentist, the more relaxed they will be and the less likely they are to need further or extensive treatment.\n\n
    If your child needs orthodontic work, we employ orthodontic specialists who can assess your child and fit them with braces. This can usually take place in your regular CFD surgery, for your convenience and to help your child feel at ease.\n\n
    The advice below answers some of the most commonly asked questions we get from parents, but please pop in to see us if you have any other queries.\n\n</string>
    <string name="childrendental_question_1"><b>When should I first take my child to the dentist ?</b>\n</string>
    <string name="childrendental_answer_1">It is best to discuss this with your dentist first, but you could take your baby to your own routine check-ups.
        This can help the baby to get used to the surroundings.\n\n
        Your dentist will be able to offer advice and prescribe medicines for teething pains, and will be happy to answer any questions you may have.
        Your child’s own check-ups can start any time from about six months or from when the teeth start to appear.\n\n</string>
    <string name="childrendental_question_2"><b>What if my child is nervous about going to the dentist?</b>\n</string>
    <string name="childrendental_answer_2">Here at Centre for Dentistry we overcome a lot of adult and child fears about visiting the dentist. If your child is nervous, pop in a few times before their appointment when you are doing your shopping. Our teams are really friendly and welcoming. They may give them a balloon and let them have a climb on the dentist’s chair (if no one is in it!) .\n\n
        Children can sense fear in their parents, so it is important not to let your child feel or hear any fears you may have. Try to be supportive if your child needs to have any dental treatment.\n\n
        Regular visits to the dental team are essential in helping your child get used to the surroundings, so that, if and when, they do need any treatment, they feel relaxed and happy at the dentist.\n\n</string>
    <string name="childrendental_question_3"><b>When do my child\'s teeth come through?</b>\n</string>
    <string name="childrendental_answer_3">All children are different and develop at different rates, however, the following is a general guide.
        First or ‘baby’ teeth have usually developed before your child is born and will start to come through at around six months. All twenty baby teeth should be through by the age of two-and-a-half.\n\n
        The first permanent ‘adult’ molars (back teeth) will appear at about six years, behind the baby teeth and before the first teeth start to fall out. The adult teeth will then replace the baby teeth. It is usually the lower front teeth that are lost first, followed by the upper front teeth shortly after.\n\n All adult teeth should be in place by the age of thirteen, except the wisdom teeth.
        These may come through at any time between eighteen and twenty five years of age.\n\n</string>
</resources>