<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorPrimaryDarker">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bookmark_border_white_24dp"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/book_an_appointment"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_an_available"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:gravity="center"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BOOK"
                        android:id="@+id/book_an_appointment_button"
                        android:textColor="@color/colorPrimaryDarker"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_book_white_24dp"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/existing_appointments"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/any_past"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:gravity="center"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VIEW"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:id="@+id/existing_appointment_button"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/colorPink">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add_to_photos_black_24dp"
                            android:tint="@color/colorWhite"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/emergency_appointments"
                            android:textSize="16sp"
                            android:paddingTop="6dp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@color/colorWhite"
                            />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="CALL TO BOOK"
                            android:textColor="@color/colorPink"
                            android:layout_marginTop="12dp"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/appointment_emergency"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>



</LinearLayout>
