<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:orientation="horizontal">

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               app:cardUseCompatPadding="true"
               android:id="@+id/appointments_cardview"
               app:cardBackgroundColor="@color/colorPrimaryDarker">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/appointments"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nav_appointments"
                        android:textSize="16sp"
                        android:layout_marginTop="12dp"
                        android:padding="12dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
           </android.support.v7.widget.CardView>
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               app:cardUseCompatPadding="true"
               android:id="@+id/messages_cardview"
               app:cardBackgroundColor="@color/colorPrimaryDark">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_gravity="center">

                   <ImageView
                       android:layout_width="80dp"
                       android:layout_height="80dp"
                       android:src="@drawable/messages"
                       android:layout_gravity="center"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/nav_messages"
                       android:textSize="16sp"
                       android:padding="12dp"
                       android:layout_marginTop="12dp"
                       android:gravity="center"
                       android:textColor="@color/colorWhite"
                       />
               </LinearLayout>
           </android.support.v7.widget.CardView>

       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:orientation="horizontal">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:orientation="horizontal">

               <android.support.v7.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   app:cardUseCompatPadding="true"
                   android:id="@+id/voucher_cardview"
                   app:cardBackgroundColor="@color/colorPink">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_gravity="center">

                       <ImageView
                           android:layout_width="80dp"
                           android:layout_height="80dp"
                           android:src="@drawable/voucher"
                           android:tint="@color/colorWhite"
                           android:layout_gravity="center"/>
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="@string/nav_voucher_wallet"
                           android:textSize="16sp"
                           android:padding="12dp"
                           android:gravity="center"
                           android:layout_marginTop="12dp"
                           android:textColor="@color/colorWhite"
                           />
                   </LinearLayout>
               </android.support.v7.widget.CardView>
               <android.support.v7.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   app:cardUseCompatPadding="true"
                   android:id="@+id/myplan_cardview"
                   app:cardBackgroundColor="@color/colorBlue">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_gravity="center">

                       <ImageView
                           android:layout_width="80dp"
                           android:layout_height="80dp"
                           android:src="@drawable/plan"
                           android:tint="@color/colorWhite"
                           android:layout_gravity="center"/>
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:text="Become a plan member"
                           android:textSize="16sp"
                           android:padding="12dp"
                           android:layout_marginTop="12dp"
                           android:gravity="center"
                           android:textColor="@color/colorWhite"
                           />
                   </LinearLayout>
               </android.support.v7.widget.CardView>

           </LinearLayout>




       </LinearLayout>

   </LinearLayout>

</LinearLayout>
